[package]
name = "lnx"
version = "0.6.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"
description = "The adaptable deployment of the tantivy search engine. Standing on the shoulders of giants. "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "rt", "signal"] }
poem-openapi = { version = "1.2", features = ["redoc", "uuid"] }
poem = { version = "1.2", features = ["anyhow", "opentelemetry"] }
chrono = { version = "0.4", features = ["serde"] }
hashbrown = { version = "0.11", features = ["serde"] }
fern = { version = "0.6", features = ["colored"] }

thiserror = "1.0.30"
arc-swap = "1.4.0"
bincode = "1.3"
structopt = "0.3"
log = "0.4"
anyhow = "1"
num_cpus = "1.13"
bytes = "1"
serde_json = "1"
headers = "0.3.4"
parking_lot = "0.11"
rand = "0.8.4"

engine = { path = "../search-engine/engine" }
